--- a/#11 - Change Color TitleBar/config.ini
+++ b/#11 - Change Color TitleBar/config.ini
@@ -1,2 +1,6 @@
 + pentru a schimba culoare bari de titlu schimbam in fisierul temei aplicati culoare status bar:
-	
+	if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.LOLLIPOP) {
+	    getWindow().setStatusBarColor(ContextCompat.getColor(this, R.color.your_status_bar_color));
+	}
+
+	Verifică versiunea Android pentru a se asigura că este cel puțin Lollipop (nivelul API 21), deoarece caracteristica de schimbare a culorii barei de stare a fost introdusă în Lollipop.
