--- a/#9 - Remove NavigationBar/config.ini
+++ b/#9 - Remove NavigationBar/config.ini
@@ -3,6 +3,8 @@
 int uiOptions = View.SYSTEM_UI_FLAG_HIDE_NAVIGATION;
 decorView.setSystemUiVisibility(uiOptions);
 
++Pentru a face sa ascunde bar de navigare dar in acelasi timp sa o putem afisa cand avem nevoie si sa se retracteze automat putem folosi flag Hide_NAVIGATIOON si flag imersive_stiky care va retract automa si va pastra ascunse elementele.
+
 + Dacă dorești să afișezi bara de navigare din nou, poți folosi același cod, dar schimbă opțiunile astfel:
 	View decorView = getWindow().getDecorView();
 int uiOptions = View.SYSTEM_UI_FLAG_VISIBLE;
