--- a/#000 --- Apps --- 000#/TicTacToe/V1.2/app/src/main/AndroidManifest.xml
+++ b/#000 --- Apps --- 000#/TicTacToe/V1.2/app/src/main/AndroidManifest.xml
@@ -2,6 +2,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
+    <uses-permission android:name="android.permission.BLUETOOTH_SCAN"></uses-permission>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"></uses-permission>
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
+
+
+    <uses-feature android:name="android.hardware.bluetooth" android:required="true"></uses-feature>
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +27,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.XO22"
         tools:targetApi="31">
+        <activity
+            android:name=".GameBoard"
+            android:exported="false" />
+        <activity
+            android:name=".CreateRoom"
+            android:exported="false" />
+        <activity
+            android:name=".ConnectRoom"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
